--- a/HW1.Rmd
+++ b/HW1.Rmd
@@ -37,5 +37,6 @@ You can also embed plots, for example:
 ```{r pressure, echo=FALSE}
 plot(pressure)
 ```
+hihi
 
 Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
